fix: navbar color in dark mode

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -334,7 +334,7 @@ b, strong {
   color: #5f6bd2;
 }
 .dark-mode .navbar[class*="headroom--not-top"] {
-  background: #0c0c0d;
+  background: #080826;
   border-bottom: 1px solid #1f1f1f;
 }
 .dark-mode .small-text {
